@@ -1795,6 +1795,7 @@ backup_dirtar=Creating TAR file of home directory ..
 backup_dirtarfailed=.. TAR failed! $1
 backup_virtualmincp=Copying virtual server configuration ..
 backup_apachecp=Copying Apache virtual host configuration ..
+backup_apachelog=Copying Apache log files ..
 backup_proftpdcp=Copying ProFTPd virtual server configuration ..
 backup_mysqldump=Dumping MySQL database $1 ..
 backup_mysqldumpfailed=.. dump failed! $1
@@ -1911,6 +1912,7 @@ restore_mysqlloadfailed=.. load failed! $1
 restore_mysqlgunzipfailed=.. gunzip failed! $1
 restore_mysqlnosuch=.. database does not exist.
 restore_apachecp=Restoring Apache virtual host configuration ..
+restore_apachelog=Restoring Apache log files ..
 restore_proftpdcp=Restoring ProFTPd virtual server configuration ..
 restore_sslcp=Restoring SSL Apache virtual host configuration and certificate ..
 restore_postgresdrop=Deleting old PostgreSQL databases ..
