@@ -868,3 +868,4 @@ Basic Exim support, thanks to Bill Moyers and John Gray.
 When migrating a cPanel, Plesk or Ensim backup, the original domain name can now be worked out automatically, as long as the backup contains just one.
 For new installs, new features in older versions are not shown on the System Information page.
 Fixed the modification of Webalizer and Logrotate config files when a domain's Apache logs are outside it's home directory.
+Apache logs outside a domain's home directory are now included in backups and restores.
